CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2009 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2009.February.21 (0.9.21)
  * New Starters:
    -------------
    * Silver Frame
      Caroline Ford <caroline.ford.work@googlemail.com>

    * Jigsaw 3x3 & 5x5
      Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>

  * New Magic Tools:
    ----------------
    * + Blur (entire image mode) - Blurs entire image
      + Alien - Modifies the colours in the image to give an "alien" apperance.
      + Sharpen - Sharpens entire image
      + Trace Contour - Traces the edges of the image, over a white background.
      + Silhouette - Creates an outline of the image, over a black background.
      + Threshold - Turns image pure colour & pure white (no grey or color).
      + Snow Ball - Places random snow balls over the image.
      + Snow Flake - Places random snow flakes over the image.
      + Noise - Adds random noise to the image.
      + Mosaic - Gives the image a mosaic effect.
      + Rain - Adds rain drops to the image.
      + Toothpaste - Squirts "toothpaste" on to the image.
      By Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)

    * + Confetti - Paints random confetti bits on the canvas.
      + Fold - Folds the corners of the image up, like a piece of paper.
      + Fisheye - Warps part of the picture, as though seen through a fisheye.
      + TV - Adds television (CRT) interlacing lines over the image.
      + Rosette - Paints at 3 points on the screen, in a rosette shape.
      + Picasso - Paints at 3 points, in a "Picasso" art style.
      + Wavelets - Waves that go up and down.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)

    * Rails - Draws train tracks / rails over the image.